css logo, menu e  reset css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Clone</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css">
@@ -13,10 +14,11 @@
 <body>
     <div class="sidebar">
         <nav class="sidebar_navigation">
-            <div> 
+            <div class="logo"> 
                 <a href="">
                     <img src="./assets/icons/logo-spotify.png" alt="logo do Spotify">
                 </a>
+            </div>
             <div>
                 <ul>
                     <ul>
@@ -24,16 +26,14 @@
                             <a href="">
                                 <span class="fa fa-home"></span>
                                 <span>Início</span>
-                            </a>
-                            <a href="">
-                                <span class="fa fa-search"></span>
-                                <span>Buscar</span>
-                            </a>
                         </li>
-                        <li>Buscar</li>
+                    </a>
+                    <a href="">
+                        <span class="fa fa-search"></span>
+                        <span>Buscar</span>
+                    </a>
                     </ul>
                 </ul>
-            </div>
             </div>
         </nav>
     </div>
